--- a/package.json
+++ b/package.json
@@ -27,8 +27,17 @@
   },
   "homepage": "https://github.com/quandev99/nodejs_blog#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.2"
+    "express-handlebars": "^7.0.2",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.0",
+    "mongoose-delete": "^0.5.4",
+    "mongoose-slug-generator": "^1.0.4",
+    "slugify": "^1.6.5",
+    "speakingurl": "^14.0.1",
+    "type": "^2.7.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
