--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/quandev99/nodejs_blog#readme",
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "bcrypt-nodejs": "^0.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
