--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.0",
     "mongoose-delete": "^0.5.4",
