--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ACCESS_TOKEN_SECRET=mysecret;
-REFRESH_TOKEN_SECRET=myrefrehsecret;
+ACCESS_TOKEN_SECRET="Quandev99";
+REFRESH_TOKEN_SECRET="Quandeptrai";
