--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ACCESS_TOKEN_SECRET="Quandev99";
-REFRESH_TOKEN_SECRET="Quandeptrai";
+ACCESS_TOKEN_SECRET=quandeptrai;
+REFRESH_TOKEN_SECRET=quandeptrai1;
